--- a/public/style.css
+++ b/public/style.css
@@ -86,45 +86,16 @@ hr{
   margin-top: 20px;
   margin-bottom: 10px;
 }
-
-#favorite-panel.ng-hide {
-  transform: translateX(100px);
+.my-panel-parent {
+  overflow: hidden;
 }
 
-#favorite-panel.ng-hide-add {
-  transition: 1s;
+.my-panel-child.ng-hide-remove {
+  transform: translateX(-500px);
+  transition: all 0.5s;
 }
 
-#detail-panel.ng-hide {
-  transform: translateX(-100px);
-}
-
-#detail-panel.ng-hide-add {
-  transition: 1s;
-}
-
-.animate-enter, 
-.animate-leave
-{ 
-    -webkit-transition: 300ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
-    -moz-transition: 300ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
-    -ms-transition: 300ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
-    -o-transition: 300ms cubic-bezier(0.250, 0.100, 0.250, 1.000) all;
-    transition: 0.5s linear all;
-	transition-delay: 0.5s;
-} 
- 
-.animate-enter {
-    left: 100%;
-}
-.animate-enter.animate-enter-active {
-    left: 0;
-}
- 
-.animate-leave {
-    left: 0;
-}
-.animate-leave.animate-leave-active{
-    left: -100%;
+.my-panel-child.ng-hide-remove.ng-hide-remove-active {
+  transform: translateX(0px);
 }
 
